# replay-parser

./: .gitignore  Cargo.toml  README.ko.md  README.md
.github/workflows/: ci.yml
crates/bw-engine/: Cargo.toml
crates/bw-engine/docs/: architecture.md
crates/bw-engine/src/: chk.rs  chk_units.rs  dat.rs  direction.rs  error.rs  fp8.rs  game.rs  lib.rs  map.rs  pathfind.rs  regions.rs  tile.rs  tileset.rs  unit.rs  vision.rs
crates/bw-engine/tests/: real_data.rs  replay_sim.rs
crates/replay-core/: Cargo.toml
crates/replay-core/docs/: architecture.md
crates/replay-core/src/: classify.rs  gamedata.rs  header.rs  identity.rs  lib.rs  metadata.rs  similarity.rs  timeline.rs
crates/replay-core/tests/: integration.rs  proptest.rs
crates/replay-nif/: Cargo.toml
crates/replay-nif/src/: lib.rs
crates/replay-wasm/docs/: architecture.md
crates/replay-wasm/src/: lib.rs
demo/: index.html
docs/: api-reference.md  game-data-files.md  getting-started.md
