[package]
name = "replay-core"
version = "0.1.0"
description = "StarCraft: Brood War replay (.rep) parser"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
flate2.workspace = true
encoding_rs.workspace = true
explode.workspace = true
serde.workspace = true

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true

[[bench]]
name = "parsing"
harness = false
