[package]
name = "replay-nif"
version = "0.1.0"
description = "Erlang NIF bindings for the BW replay parser"
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
replay-core = { path = "../replay-core" }
rustler.workspace = true
